[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Blocks/IOPortBlocks/PortBlockBase.gd" type="Script" id=2]
[ext_resource path="res://BlockSystems/BlockSystems_Manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://BlockSystems/IOPorts/PortManager.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="IOPortBlockBase" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="BlockSystems" parent="." instance=ExtResource( 3 )]

[node name="PortManager" parent="BlockSystems" instance=ExtResource( 4 )]
