[gd_scene load_steps=4 format=2]

[ext_resource path="res://ShipBase/GridBase/Block.tscn" type="PackedScene" id=1]
[ext_resource path="res://Blocks/IOPortBlocks/PortBlockBase.gd" type="Script" id=2]
[ext_resource path="res://BlockSystems/IOPorts/PortManager.tscn" type="PackedScene" id=3]

[node name="PortBlockBase" instance=ExtResource( 1 )]
script = ExtResource( 2 )
size_grid = [ Vector2( 0, 0 ) ]
mass = 10
class_type = "Block"
display_name = ""
tile_id = 0
folder_address = ""
hitbox_colliders = [  ]
hitbox_string_old = "Hitbox"

[node name="PortManager" parent="BlockSystems" index="0" instance=ExtResource( 3 )]
